--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,7 @@
             </div>
 
             <!-- Контейнер для карточек файлов -->
-            <div id="filesContainer" class="mt-6 grid gap-4 hidden">
+            <div id="filesContainer" class="mt-6 gap-4 hidden">
                 <h2 class="text-2xl font-semibold text-purple">Загруженные файлы</h2>
                 <div id="filesList" class="space-y-4"></div>
             </div>
