--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,112 +1,115 @@
 <!DOCTYPE html>
-<html lang="ru" class="font-cute">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Code Merger</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="icon" type="image/x-icon" href="/assets/logo/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/logo/favicon.ico">
 </head>
 
-<body class="bg-gradient-to-br from-secondary-light to-white min-h-screen overflow-x-hidden">
+<body>
     <!-- Header -->
-    <div class="container mx-auto px-6 py-4">
-        <div class="flex items-center justify-between">
-            <!-- Логотип и название -->
-            <div class="ml-2 flex items-center space-x-4">
-                <!-- Логотип -->
-                <img src="assets/logo.svg" alt="Code Merger Logo" class="w-8 h-8 md:w-10 md:h-10">
-
-                <!-- Название -->
-                <div>
-                    <h1 class="text-[clamp(1.5rem,2vw,2.5rem)] font-bold text-primary drop-shadow-lg">
-                        Code Merger
-                    </h1>
-                    <p class="text-[clamp(1rem,1.5vw,1.25rem)] text-gray-700 mt-1">
-                        Объедините ваши кодовые файлы
-                    </p>
-                </div>
-            </div>
-
-            <!-- Theme toggle -->
-            <div class="mr-4 flex items-center">
-                <label for="themeToggle" class="ml-4 relative select-none">
-                    <input type="checkbox" id="themeToggle" class="sr-only peer">
-                    <div class="theme-toggle">
-                        <div class="theme-toggle-circle">
-                            <span class="theme-toggle-icon">🌞</span>
-                        </div>
+    <header class="sticky-header">
+        <div class="container">
+            <div class="d-flex align-items-center justify-content-between py-3">
+                <!-- Логотип и название -->
+                <div class="d-flex align-items-center">
+                    <!-- Логотип -->
+                    <div class="me-3">
+                        <img src="assets/logo/logo.svg" alt="Code Merger Logo" class="logo-img">
                     </div>
-                </label>
-            </div>
-        </div>
-    </div>
-    </header>
-
-    <div class="container mx-auto px-4 py-8 max-w-6xl">
-        <main class="space-y-8">
-            <!-- Drop Zone -->
-            <div class="text-center">
-                <div id="dropZone" class="enhanced-drop-zone mx-auto">
-                    <div class="text-gray-600 pointer-events-none">
-                        <div class="drop-zone-icon mb-3 text-6xl md:text-7xl">📁</div>
-                        <h2 class="text-2xl md:text-3xl font-bold text-primary mb-2">
-                            Перетащите файлы сюда
-                        </h2>
-                        <p class="text-base md:text-lg mb-1">или нажмите для выбора файлов</p>
-                        <p class="text-xs md:text-sm text-gray-500 mt-3">
-                            Поддерживаются: .md, .txt, .yaml, .yml, .json, .cpp, .go,
-                            .py, .html, .css, .js
+                    <!-- Название -->
+                    <div>
+                        <h1 class="app-title text-primary m-0">
+                            Code Merger
+                        </h1>
+                        <p class="app-subtitle m-0">
+                            Объедините ваши кодовые файлы
                         </p>
                     </div>
-                    <input type="file" id="fileInput" class="hidden" multiple
+                </div>
+
+                <!-- Виджет: смена темы -->
+                <div class="d-flex align-items-center">
+                    <label class="theme-toggle-wrapper" for="themeToggle">
+                        <input type="checkbox" id="themeToggle" class="theme-toggle-input">
+                        <div class="theme-toggle-slider">
+                            <span class="theme-toggle-icon theme-toggle-sun">☀️</span>
+                            <span class="theme-toggle-icon theme-toggle-moon">🌙</span>
+                        </div>
+                    </label>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <div class="container my-4">
+        <main class="main-content">
+            <!-- Зона: загрузка файлов -->
+            <div class="text-center mb-4">
+                <div id="dropZone" class="enhanced-drop-zone mx-auto">
+                    <div class="drop-zone-content">
+                        <div class="drop-zone-icon">📁</div>
+                        <h2 class="drop-zone-title text-primary mb-3">
+                            Перетащите файлы сюда
+                        </h2>
+                        <p class="drop-zone-subtitle mb-2">или нажмите для выбора файлов</p>
+                        <p class="file-types">
+                            Поддерживаются: .md, .txt, .yaml, .yml, .json, .cpp, .go,
+                            .py, .html, .css, .js, .sh
+                        </p>
+                    </div>
+                    <input type="file" id="fileInput" class="d-none" multiple
                         accept=".md,.txt,.yaml,.yml,.json,.cpp,.go,.py,.html,.css,.js,.sh">
                 </div>
             </div>
 
-            <!-- Загруженные файлы -->
-            <div id="filesContainer" class="files-container hidden">
-                <h2 class="text-3xl font-bold text-primary mb-6 text-center">Загруженные файлы</h2>
-                <div id="filesList" class="space-y-4"></div>
+            <!-- Зона: загруженные файлы -->
+            <div id="filesContainer" class="files-container d-none">
+                <h2 class="files-title text-primary mb-4 text-center">Загруженные файлы</h2>
+                <div id="filesList" class="files-list"></div>
             </div>
 
-            <!-- Панель управления -->
-            <div id="controlPanel" class="files-container hidden">
+            <div id="controlPanel" class="files-container d-none">
                 <div>
-                    <h3 class="text-2xl font-bold text-primary mb-4 text-center">Настройки вывода</h3>
-                    <div class="flex flex-col lg:flex-row gap-6 items-start lg:items-end">
-                        <div class="flex-1">
-                            <label for="outputFilename" class="block text-lg font-semibold text-gray-700 mb-2">Имя
-                                выходного файла</label>
-                            <div class="flex gap-3">
-                                <input type="text" id="outputFilename"
-                                    class="flex-1 px-4 py-3 border-3 rounded-xl focus:outline-none focus:ring-2 focus:ring-primary text-lg hover:ring-2 hover:ring-primary"
-                                    placeholder="Введите имя файла">
-                                <select id="presetSelect"
-                                    class="px-4 py-3 border-3 rounded-xl clean-select bg-white focus:outline-none focus:ring-2 focus:ring-primary text-lg hover:ring-2 hover:ring-primary">
-                                    <option value="custom">Выберите пресет...</option>
-                                    <option value="code-base.txt">code-base.txt</option>
-                                    <option value="specifications.txt">specifications.txt</option>
-                                </select>
+                    <h3 class="control-title text-primary mb-3 text-center">Настройки вывода</h3>
+                    <div class="row g-3 align-items-end">
+                        <div class="col-md-8">
+                            <label for="outputFilename" class="form-label fw-semibold">Имя выходного файла</label>
+                            <div class="row g-2">
+                                <div class="col-7">
+                                    <input type="text" id="outputFilename" class="form-control form-control-lg"
+                                        placeholder="Введите имя файла">
+                                </div>
+                                <div class="col-5">
+                                    <select id="presetSelect" class="form-select form-control-lg">
+                                        <option value="custom">Выберите пресет...</option>
+                                        <option value="code-base.txt">code-base.txt</option>
+                                        <option value="specifications.txt">specifications.txt</option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
-                        <button id="mergeButton" disabled
-                            class="px-8 py-3 bg-primary text-white font-bold rounded-xl hover:bg-primary-dark transform hover:scale-105 disabled:opacity-50 disabled:cursor-not-allowed smooth-transition text-lg">
-                            Объединить
-                        </button>
+                        <div class="col-md-4">
+                            <button id="mergeButton" disabled class="btn btn-primary btn-lg w-100 merge-btn">
+                                Объединить
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Прогресс -->
-            <div id="progressIndicator" class="hidden">
+            <div id="progressIndicator" class="d-none">
                 <div class="files-container text-center">
-                    <div class="flex items-center justify-center space-x-4">
-                        <div class="animate-spin rounded-full h-8 w-8 border-b-2"
-                            style="border-color: var(--color-primary);"></div>
-                        <span class="text-xl text-gray-700">Обработка файлов...</span>
+                    <div class="d-flex align-items-center justify-content-center gap-3">
+                        <div class="spinner-border text-primary" role="status">
+                            <span class="visually-hidden">Обработка файлов...</span>
+                        </div>
+                        <span class="progress-text">Обработка файлов...</span>
                     </div>
                 </div>
             </div>
@@ -114,6 +117,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="app.js"></script>
 </body>
 
