--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,10 +24,10 @@
                     </div>
                     <!-- Название -->
                     <div>
-                        <h1 class="app-title gradient-text m-0">
+                        <h1 class="app-title m-0">
                             Code Merger
                         </h1>
-                        <p class="app-subtitle gradient-subtitle m-0">
+                        <p class="app-subtitle m-0">
                             Объедините ваши кодовые файлы
                         </p>
                     </div>
@@ -37,21 +37,7 @@
                 <div class="d-flex align-items-center">
                     <label class="theme-toggle-wrapper" for="themeToggle">
                         <input type="checkbox" id="themeToggle" class="theme-toggle-input">
-                        <div class="theme-toggle-slider">
-                            <div class="theme-toggle-handle"></div>
-                            <div class="theme-toggle-sun">
-                                <div class="sun-core"></div>
-                                <div class="sun-ray"></div>
-                                <div class="sun-ray"></div>
-                                <div class="sun-ray"></div>
-                                <div class="sun-ray"></div>
-                            </div>
-                            <div class="theme-toggle-moon">
-                                <div class="moon-crater"></div>
-                                <div class="moon-crater"></div>
-                                <div class="moon-crater"></div>
-                            </div>
-                        </div>
+                        <div class="theme-toggle-slider"></div>
                     </label>
                 </div>
             </div>
