--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,7 +37,9 @@
                 <div class="d-flex align-items-center">
                     <label class="theme-toggle-wrapper" for="themeToggle">
                         <input type="checkbox" id="themeToggle" class="theme-toggle-input">
-                        <div class="theme-toggle-slider"></div>
+                        <div class="theme-toggle-slider">
+                            <div class="theme-toggle-handle"></div>
+                        </div>
                     </label>
                 </div>
             </div>
